--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       COVID-19 is a disease caused by a new strain of coronavirus. ‘CO’ stands for corona, ‘VI’ for virus, and ‘D’ for disease.
       Choose a Country, WORLDWIDE, COVID-19 Fatality Rate by Gender, SYMPTOMS ARTICLE, For More Information please Visit World Health Organization Website"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
