--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
       name="description"
       content="Wash Your hands and always wear mask|
       COVID-19 is a disease caused by a new strain of coronavirus. ‘CO’ stands for corona, ‘VI’ for virus, and ‘D’ for disease.
-      Choose a Country, WORLDWIDE, COVID-19 Fatality Rate by Gender, SYMPTOMS ARTICLE, For More Information please Visit World Health Organization Website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
@@ -35,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CovidJS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
